test/syntax-errors/instruction2.sos
# instruction ne peut pas commencer par ;

;